--- a/client/src/index.css
+++ b/client/src/index.css
@@ -26,3 +26,21 @@ input#number {
   padding-left: 10px;
   border: 1px solid;
 }
+
+
+input::-ms-reveal,
+input::-ms-clear {
+  display: none;
+}
+
+input::-webkit-credentials-auto-fill-button {
+  visibility: hidden;
+  display: none !important;
+}
+
+input[type="password"]::-webkit-textfield-decoration-container {
+  display: none !important;
+}
+
+
+
